# NLP-stonk-analysis

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  stonk_cli.py
.github/workflows/: deploy.yml  refresh.yml
api/: db.py  main.py  models.py  schemas.py
api/routes/: articles.py  backtests.py  prices.py  sentiment.py  signals.py
config/: settings.py
docs/: architecture.md  data-model.md  frontend.md  nlp-pipeline.md  roadmap.md  strategy.md  tech-stack.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/: articles.json  backtests.json  crypto.json  dividends.json  earnings.json  meta.json  signals.json  trading.json
frontend/public/data/prices/: AAPL.json  AMD.json  AMZN.json  GOOGL.json  JPM.json  LZ.json  META.json  MSFT.json  NFLX.json  NVDA.json  TSLA.json
frontend/public/data/sentiment/: AAPL.json  AMD.json  AMZN.json  GOOGL.json  JPM.json  LZ.json  META.json  MSFT.json  NFLX.json  NVDA.json  TSLA.json
frontend/src/: App.tsx  api.ts  icons.tsx  main.tsx  styles.css  types.ts  utils.ts
frontend/src/pages/: Backtest.tsx  Dashboard.tsx  DividendMaxxing.tsx  Earnings.tsx  GridTrading.tsx  Ticker.tsx  Trading.tsx  Watchlist.tsx
ingestion/: crypto.py  dividends.py  earnings.py  news.py  prices.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_signals_unique.py
nlp/: pipeline.py  sentiment.py  ticker_extraction.py
scripts/: export_snapshots.py
strategy/: backtest.py  grid.py  signals.py
trading/: executor.py
