[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-stonk-analysis"
version = "0.1.0"
description = "News-sentiment trading signals with backtesting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=1.26",
    "transformers>=4.46",
    "torch>=2.2",
    "python-dateutil>=2.9",
    "tenacity>=9.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "ipython>=8.27",
]

[project.scripts]
stonk = "stonk_cli:main"

[tool.setuptools]
py-modules = ["stonk_cli"]

[tool.setuptools.packages.find]
include = ["api*", "ingestion*", "nlp*", "strategy*", "config*", "scripts*"]
exclude = ["frontend*", "tests*", "migrations*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
